<?xml version="1.0"?>
<package format="2">
  <name>ros_examples</name>
  <version>1.0.0</version>
  <description>ROS examples for various basic concepts</description>
  <author email="dringakn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</author>
  <maintainer email="dringakn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</maintainer>
  <url type="website">http://web.lums.edu.pk/~akn</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dynamic reconfigure  -->
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <!-- Custom message/service/action related -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- RViz display plugin example -->
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <!-- 
      Example RViz display plugin to be loaded by rviz.
      Note: rviz is specfied as the package not this package 
    -->
    <rviz plugin="${prefix}/example_rviz_display_plugin_description.xml"/>
  </export>

</package>