<?xml version="1.0"?>
<package format="2">
  <name>ros_examples</name>
  <version>1.0.0</version>
  <description>ROS examples for various basic concepts</description>
  <author email="dringakn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</author>
  <maintainer email="dringakn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</maintainer>
  <url type="website">http://web.lums.edu.pk/~akn</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dynamic reconfigure  -->
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <!-- Custom message/service/action related -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- RViz display plugin example -->
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <depend>nodelet</depend>

  <build_depend>octomap</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>filters</build_depend>

  <export>

    <!-- 
      Example RViz display plugin to be loaded by rviz.
      Note: rviz is specfied as the package tag not the current package name (ros_examples).
      It should correspond to the package where the base_class for the plugin lives. 
      In this case, the base class and the inherited plugin classes live in the same package, 
      but in most real-world situations this will not be the case such as rviz.
    -->
    <nodelet plugin="${prefix}/example_nodelet_plugin.xml"/>
    <ros_examples plugin="${prefix}/example_optimal_path_plugin.xml"/>
    <rviz plugin="${prefix}/example_rviz_display_plugin.xml"/>

  </export>

</package>